--- a/hcdisplay/assets/css/style.scss
+++ b/hcdisplay/assets/css/style.scss
@@ -394,7 +394,7 @@
 }
 
 .hero-text p {
-    color: $theme-color;
+    color: #eaeaea;
     font-size: 15px;
     font-weight: 500;
     letter-spacing: 0.8px;
