--- a/_custom.scss
+++ b/_custom.scss
@@ -7,6 +7,7 @@
 @import "hcdisplay/assets/css/home-version";
 @import "hcdisplay/assets/css/page";
 @import "hcdisplay/assets/css/style";
+@import "hcdisplay/assets/css/shop";
 @import "hcdisplay/assets/css/responsive.css";
 @import "../../../assets/sass/variables";
 @import "../../../assets/sass/frontend/category";
@@ -18,6 +19,10 @@
   img{
     max-width: 200px;
   }
+}
+
+#header-area{
+  box-shadow: 0px 1px 17px #afafaf8c;
 }
 
 .tab-content .list-group{
@@ -121,3 +126,51 @@
     }
   }
 }
+
+.sub-side-ul{
+  li:first-child{
+    padding-top: 12px!important;
+  }
+  .sub-side{
+    padding: 12px 0 12px 12px;
+  }
+}
+.page-title.section-title p{
+  color:#fff;
+}
+
+.product-content{
+  h4{
+    font-size: 14px;
+    font-weight: 600;
+    height: 2.5em;
+    color: #616161;
+    letter-spacing: 0.6px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    text-transform: uppercase;
+  }
+  border-radius: 0 0 5px 5px;
+  font-size: 13px;
+  line-height: 1.9em;
+  padding: 25px 20px 25px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.product-content, .product-content a, .product-content h4{
+  color: #616161;
+  letter-spacing: .6px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.single-news-content:hover .product-content {
+  background-color: #fff;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.project-infor{
+  margin:2em 0;
+}
+
